src/objects/Marketing_Cloud_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>All_Taxes__c</fullName>
        <label>All Taxes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomEreceiptMapping__c</fullName>
        <label>CustomEreceiptMapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Mapping__c</fullName>
        <label>Field Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trasaction_Items_del__c</fullName>
        <label>Trasaction Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Marketing Cloud Field Mapping</label>
    <pluralLabel>Marketing Cloud Field Mappings</pluralLabel>
</CustomObject>